# NanOs

./: .gitignore  Makefile  Makefile.rules  clean.sh  config.sh  default-host.sh  iso.sh  nanos.iso  qemu.sh  start
TODO/: kernel
kernel/: CMakeLists.txt  GDT.h  Makefile  boot.s  kernel.cpp  kernel_init.c  nanos.kernel  vga.cpp  vga.h
kernel/arch/i386/: boot.S  crti.S  crtn.S  init_utility.S  init_utility.d  linker.ld  make.config  tty.c  tty.d  vga.h
kernel/arch/i386/serial/: serial_initialize.c  serial_initialize.d  serial_write.c  serial_write.d  serial_writestring.c  serial_writestring.d
kernel/include/: input_event_codes.h
kernel/include/kernel/: GDT.h  baseIO.h  intr.h  log.h  serial.h  tty.h
kernel/kernel/: gdt.c  interrupt.c  isr.S  kernel.c  kernel.d  kernel_init.c  kernel_init.d  keyboard.c  log.c  log.d
kernel/sort/: MemoryController.cpp  MemoryController.h  math.h  multiboot_information.h  vga.cpp  vga.h
libc/: Makefile
libc/arch/i386/: make.config
libc/arch/i386/math/: ceil.c  floor.c
libc/include/: math.h  stdio.h  stdlib.h  string.h
libc/include/sys/: cdefs.h
libc/stdio/: _vxprintf.c  printf.c  printf.libk.d  putchar.c  putchar.libk.d  puts.c  puts.libk.d  snprintf.c  snprintf.libk.d  sprintf.c  sprintf.libk.d  vprintf.c  vsnprintf.c  vsnprintf.libk.d  vsprintf.c  vsprintf.libk.d
libc/stdlib/: abort.c  abort.libk.d  itoa.c  itoa.libk.d
libc/string/: memcmp.c  memcmp.libk.d  memcpy.c  memcpy.libk.d  memmove.c  memmove.libk.d  memset.c  memset.libk.d  strlen.c  strlen.libk.d
sysroot/usr/include/: string.h
(+3 files in other folders)
